cmake_minimum_required(VERSION 3.23)
project(5CardDraw C)

set(CMAKE_C_STANDARD 99)
include_directories(C:/Users/aless/CLionProjects/Librerie/listlib)
include_directories(C:/Users/aless/CLionProjects/Librerie/vectorlib)
include_directories(C:/Users/aless/CLionProjects/Librerie/sortinglib)

add_executable(5CardDraw main.c )
